--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,4 @@ NEXT_PUBLIC_APP_ID='15f5989e-8362-4724-aed9-ad6f78b60c28'
 # APP API key
 NEXT_PUBLIC_APP_KEY='app-aXwVg2LhwBa709rzsiv01TOp'
 # API url prefix
-NEXT_PUBLIC_API_URL='http://192.168.71.3/v1'
+NEXT_PUBLIC_API_URL='http://dify.vvimo.com/v1'
